# shownodes

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
shownodes/: access.py  attrdict.py  azmap.py  cli.py  cluster.py  node.py  nodeprices.py  pods.py  run.py  time.py  version.py
shownodes/data/: notes.md
src/shownodes/: base.py  cli.py  ip.py  output.py  table.py  top.py  units.py
src/shownodes/data/: instance-prices.json
tests/: test_one.py  test_output.py
tests/testdata/: nodes_test_01.json
